adder radius for card and fixes image overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,8 @@ img {
 
 .card {
   box-shadow: var(--card-shadow);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .card-thumb {
